# metagameAnalyzer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  IDEAS.md  MTGTOP8_SITE_DOCUMENTATION.md  README.md  alembic.ini  ignore_lands_cards.json  main.py  package-lock.json  package.json  pyproject.toml  rank_weights.json  requirements.txt  sample_decks.json
.claude/: settings.local.json
.husky/: pre-commit  pre-push
alembic/: env.py
api/: __init__.py  config.py  db.py  dependencies.py  email.py  helpers.py  logging_config.py  main.py  route_helpers.py  state.py
docs/: API_ROUTES.md
scripts/: Untitled  delete_unnamed_placeholder_players.py  export_unknown_archetypes.py  fix_deck_unknown_archetypes_from_matchups.py  fix_duplicate_players.py  fix_matchup_unknown_archetypes.py  fix_matchups_missing_opponent_deck_id.py  fix_player_names.py  fix_unnamed_placeholder_matchups.py  gen_api_routes.py  merge_alias_duplicate_players.py  merge_players_by_ids.py  merge_unnamed_placeholder_players.py  normalize_archetype_names.py  normalize_dual_faced_archetypes_in_db.py  rename_player_display.py  resave_event_matchups.py  run_alembic.py  run_api.py  sync_mtgjson.py  sync_placeholder_players_from_denorm.py  validate_matchups_matrix_coverage.py
tests/: conftest.py  test_analyzer.py  test_api.py  test_api_helpers.py  test_card_lookup.py  test_card_search.py  test_config.py  test_db_matchups.py  test_db_players.py  test_models.py  test_mtgjson_sync.py  test_normalize.py  test_scraper.py  test_settings_service.py  test_storage.py
web/: eslint.config.js  (+5 more)
(+130 files in other folders)
